nifi-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-registry-edge-svc
  namespace: cfm-streaming
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 18080
      targetPort: 18080
      protocol: TCP
  selector:
    statefulset.kubernetes.io/pod-name: nifi-registry-edge-0
